--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
